fix(breadcrumbs): wrap content when limited space

--- a/packages/breadcrumbs/src/breadcrumbs.pcss
+++ b/packages/breadcrumbs/src/breadcrumbs.pcss
@@ -5,6 +5,7 @@
 
   &__list {
     display: flex;
+    flex-wrap: wrap;
     gap: var(--sds-space-gap-tiny);
   }
 
